@@ -417,4 +417,10 @@ mb_wm_client_is_hiding_from_desktop (MBWindowManagerClient * client);
 void
 mb_wm_client_reset_hiding_from_desktop (MBWindowManagerClient * client);
 
+Bool
+mb_wm_client_is_visible (MBWindowManagerClient * client);
+
+Bool
+mb_wm_client_covers_screen (MBWindowManagerClient * client);
+
 #endif
